--- a/rwdtest/css/all.css
+++ b/rwdtest/css/all.css
@@ -282,6 +282,9 @@ table {
       font-weight: bolder; }
     .index .title hr {
       margin-bottom: 20px; }
+      @media (max-width: 415px) {
+        .index .title hr {
+          display: none; } }
   .index .list-feature {
     text-align: center;
     margin-top: 30px; }
