--- a/rwdtest/css/all.css
+++ b/rwdtest/css/all.css
@@ -281,7 +281,9 @@ table {
       display: inline-block;
       font-weight: bolder; }
     .index .title hr {
-      margin-bottom: 20px; }
+      margin-bottom: 20px;
+      width: 20%;
+      display: inline-block; }
       @media (max-width: 415px) {
         .index .title hr {
           display: none; } }
