--- a/rwdtest/css/all.css
+++ b/rwdtest/css/all.css
@@ -477,7 +477,7 @@ table {
     color: white; }
 
 .cartshow {
-  margin: 50px 0px;
+  margin: 50px 0;
   margin-left: 2%;
   float: left;
   width: 68%; }
